<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.Home">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_above="@+id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />


    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/homeText"
            android:textColor="@color/textColorWhite"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/homeDesc"
            android:textColor="@color/textColorWhite"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login_selector"
            android:text="@string/loginButtonText"
            android:textColor="@color/buttonLoginColorText" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_reg_selector"
            android:text="@string/registerButtonText"
            android:textColor="@color/buttonRegisterColorText" />
    </LinearLayout>


</RelativeLayout>
