<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activities.Invite">


    <!--<include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/invite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/inviteMessage"
                android:textColor="@color/textColorBlack"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColorBlackLight"
                android:textColorHint="@color/textColorBlackLight" />

            <Button
                android:id="@+id/inviteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_selector"
                android:text="@string/inviteButtonText"
                android:textColor="@color/textColorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="@string/inviteLinkMessage"
                android:textColor="@color/textColorBlackLight"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/inviteLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector"
                android:padding="5dp">

                <TextView
                    android:id="@+id/inviteLinkText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center_horizontal"
                    android:text="@string/inviteLink"
                    android:textColor="@color/textColorBlackLight"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

   <!-- <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button3"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="73dp" />-->

</RelativeLayout>
