<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <LinearLayout
        android:orientation="vertical"
        android:gravity="top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@id/login_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/login_et_background"
            android:ems="10"
            android:textSize="@dimen/text_size_extra_large"
            android:hint="@string/fp_email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_nornal"
            android:paddingLeft="@dimen/padding_nornal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/login_et_background"
            android:ems="10"
            android:textSize="@dimen/text_size_extra_large"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/padding_nornal"
            android:maxLength="20"
            android:paddingLeft="@dimen/padding_nornal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@id/login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_extra_large"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/rounded_corner_blue_button"
            android:text="@string/fp_submit"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@id/login_forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_small"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/forgot_ur_password"
            android:textAlignment="gravity"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textColor="@color/textColorBlackLight"
            android:textSize="@dimen/text_size_extra_large" />

        </LinearLayout>

</LinearLayout>
