<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fp_title_text"

            android:textAlignment="gravity"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_size_large" />

        <EditText
            android:id="@id/fp_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/login_et_background"
            android:ems="10"
            android:textSize="@dimen/text_size_extra_large"
            android:hint="@string/fp_email_hint"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_nornal"
            android:paddingLeft="@dimen/padding_nornal"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />

        <Button
            android:id="@id/fp_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_extra_large"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/rounded_corner_blue_button"
            android:text="@string/fp_submit"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />


    </LinearLayout>


</LinearLayout>
